@@ -14,7 +14,8 @@ SOURCES += gm_plugin.cpp \
     settings/gm_settingslistdelegate.cpp \
     settings/gm_settingsscriptinfo.cpp \
     settings/gm_settingslistwidget.cpp \
-    gm_jsobject.cpp
+    gm_jsobject.cpp \
+    gm_icon.cpp
 
 HEADERS += gm_plugin.h \
     gm_manager.h \
@@ -27,7 +28,8 @@ HEADERS += gm_plugin.h \
     settings/gm_settingslistdelegate.h \
     settings/gm_settingsscriptinfo.h \
     settings/gm_settingslistwidget.h \
-    gm_jsobject.h
+    gm_jsobject.h \
+    gm_icon.h
 
 FORMS += \
     gm_addscriptdialog.ui \
